--- a/client/src/app/components/shared/search/search.component.html
+++ b/client/src/app/components/shared/search/search.component.html
@@ -1,4 +1,4 @@
-<tui-input tuiTextfieldSize="s" [tuiTextfieldLabelOutside]="false">
+<tui-input tuiTextfieldSize="s" [tuiTextfieldLabelOutside]="false" [tuiTextfieldIconLeft]="tuiIconSearch">
   Search...
 <!--  <input tuiTextfield/>-->
 </tui-input>
