--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,4 @@
-<tui-theme-night></tui-theme-night>
-<tui-root tuiMode="onDark">
+<tui-theme-night *ngIf="darkMode"></tui-theme-night>
+<tui-root [tuiMode]="darkMode ? 'onDark': 'onLight'">
   <router-outlet/>
 </tui-root>
