--- a/client/src/app/components/shared/inputs/password-input/password-input.component.html
+++ b/client/src/app/components/shared/inputs/password-input/password-input.component.html
@@ -3,9 +3,6 @@
     Enter {{name | titlecase}}...
   </tui-input-password>
 </label>
-<tui-error >
+<error *ngIf="control.hasError('required') && control.touched">
   {{name | titlecase}} is required
-</tui-error>
-<!--<p *ngIf="control.hasError('required') && control.touched">-->
-<!--  {{name | titlecase}} is required-->
-<!--</p>-->
+</error>
