--- a/client/src/app/components/shared/movie-card/movie-card.component.scss
+++ b/client/src/app/components/shared/movie-card/movie-card.component.scss
@@ -1,3 +1,7 @@
-tui-island {
-  //background-color: var(--tui-base-02);
+.tui-island_size_m {
+  padding: 0;
+}
+
+.rating-icon {
+  color: var(--tui-accent);
 }
