--- a/client/src/app/components/pages/login-page/login-page.component.html
+++ b/client/src/app/components/pages/login-page/login-page.component.html
@@ -1,7 +1,11 @@
 <div class="w-full h-lvh flex justify-center items-center">
-  <tui-island class="w-80 h-96">
-    <p>Login</p>
+  <tui-island class="w-80 flex justify-between">
+    <p class="text-2xl mb-4 login-text flex items-center justify-center">
+      <span>Log In</span>
+    </p>
     <text-input name="username" [control]="formControls.username"/>
     <password-input name="password" [control]="formControls.password"/>
+    <button tuiButton class="mt-4" (click)="login()">Log In</button>
+    <p>New to reel review? <a tuiLink [routerLink]="['../signup']">Sign up</a></p>
   </tui-island>
 </div>
