--- a/client/src/app/components/shared/header/header.component.html
+++ b/client/src/app/components/shared/header/header.component.html
@@ -1,18 +1,21 @@
 <div class="flex justify-between items-center h-full gap-60">
   <div class="flex justify-between items-center h-full gap-1 logo">
-    <tui-svg [src]="tuiIconFilm" />
+    <tui-svg [src]="tuiIconFilm"/>
     <p class="text-sm">Reel Review</p>
   </div>
 
   <search class="grow w-40"/>
 
   <div class="flex justify-between items-center h-full gap-4">
-    <tui-svg [src]="tuiIconCompass"/>
+    <tui-svg [src]="tuiIconFilter"/>
     <tui-svg [src]="tuiIconSun" *ngIf="darkMode" (click)="toggleDarkMode()"/>
     <tui-svg [src]="tuiIconMoon" *ngIf="!darkMode" (click)="toggleDarkMode()"/>
-    <tui-svg [src]="tuiIconUser" *ngIf="authService.loggedIn" [routerLink]="'login'"/>
-    <p *ngIf="!authService.loggedIn" (click)="authService.toggle()">Login</p>
+    <ng-container *ngIf="authService.loggedIn">
+      <tui-svg [src]="tuiIconBookmark"/>
+      <tui-svg [src]="tuiIconUser" (click)="authService.toggle()"/>
+    </ng-container>
+    <ng-container *ngIf="!authService.loggedIn">
+      <p (click)="authService.toggle()" [routerLink]="'login'">Login</p>
+    </ng-container>
   </div>
-
-
 </div>
