--- a/client/src/app/components/layouts/movie-layout/movie-layout.component.html
+++ b/client/src/app/components/layouts/movie-layout/movie-layout.component.html
@@ -2,7 +2,5 @@
   <movie-card
     *ngFor="let movie of json.results"
     [movie]="movie"
-    (click)="goToMovieDetails(movie)"
-  />
+    (click)="goToMovieDetails(movie)" />
 </div>
-
