--- a/client/src/app/components/pages/login-page/login-page.component.html
+++ b/client/src/app/components/pages/login-page/login-page.component.html
@@ -3,9 +3,11 @@
     <p class="text-2xl mb-4 login-text flex items-center justify-center">
       <span>Log In</span>
     </p>
-    <text-input name="username" [control]="formControls.username"/>
-    <password-input name="password" [control]="formControls.password"/>
+    <text-input name="username" [control]="formControls.username" />
+    <password-input name="password" [control]="formControls.password" />
     <button tuiButton class="mt-4" (click)="login()">Log In</button>
-    <p>New to reel review? <a tuiLink [routerLink]="['../signup']">Sign up</a></p>
+    <p>
+      New to reel review? <a tuiLink [routerLink]="['../signup']">Sign up</a>
+    </p>
   </tui-island>
 </div>
