--- a/client/src/app/components/pages/signup-page/signup-page.component.html
+++ b/client/src/app/components/pages/signup-page/signup-page.component.html
@@ -4,12 +4,18 @@
       <span>Sign Up</span>
     </p>
     <div class="flex w-full gap-2">
-      <text-input name="First Name" [control]="formControls.firstName" class="w-full"/>
-      <text-input name="Last Name" [control]="formControls.lastName" class="w-full"/>
+      <text-input
+        name="First Name"
+        [control]="formControls.firstName"
+        class="w-full" />
+      <text-input
+        name="Last Name"
+        [control]="formControls.lastName"
+        class="w-full" />
     </div>
-    <text-input name="email" [control]="formControls.email"/>
-    <text-input name="username" [control]="formControls.username"/>
-    <password-input name="password" [control]="formControls.password"/>
+    <text-input name="email" [control]="formControls.email" />
+    <text-input name="username" [control]="formControls.username" />
+    <password-input name="password" [control]="formControls.password" />
     <button tuiButton class="mt-4 w-full">Sign up</button>
   </tui-island>
 </div>
