--- a/client/src/app/components/shared/inputs/password-input/password-input.component.html
+++ b/client/src/app/components/shared/inputs/password-input/password-input.component.html
@@ -1,8 +1,15 @@
-<label [tuiLabel]="(name | titlecase) + (control.hasValidator(Validators.required) ? '*' : null)">
-  <tui-input-password [formControl]="control | formControl" tuiTextfieldSize="m" [tuiTextfieldLabelOutside]="true">
-    Enter {{name | titlecase}}...
+<label
+  [tuiLabel]="
+    (name | titlecase) +
+    (control.hasValidator(Validators.required) ? '*' : null)
+  ">
+  <tui-input-password
+    [formControl]="control | formControl"
+    tuiTextfieldSize="m"
+    [tuiTextfieldLabelOutside]="true">
+    Enter {{ name | titlecase }}...
   </tui-input-password>
 </label>
 <error *ngIf="control.hasError('required') && control.touched">
-  {{name | titlecase}} is required
+  {{ name | titlecase }} is required
 </error>
