--- a/client/src/app/components/shared/movie-card/movie-card.component.html
+++ b/client/src/app/components/shared/movie-card/movie-card.component.html
@@ -1,20 +1,36 @@
 <tui-island class="w-56" [hoverable]="true">
-  <img class="w-full rounded-t-lg" [src]="'https://image.tmdb.org/t/p/w600_and_h900_bestv2/' + movie.backdrop_path"/>
+  <img
+    class="w-full rounded-t-lg"
+    [src]="
+      'https://image.tmdb.org/t/p/w600_and_h900_bestv2/' + movie.backdrop_path
+    " />
   <div class="p-2 flex flex-col gap-3">
     <span class="flex items-center text-sm gap-1">
-      <tui-rating [max]="1" [ngModel]="1" [iconNormal]="tuiIconStar" [iconFilled]="tuiIconStar" class="rating-icon"/>
-      {{round(movie.vote_average)}}
+      <tui-rating
+        [max]="1"
+        [ngModel]="1"
+        [iconNormal]="tuiIconStar"
+        [iconFilled]="tuiIconStar"
+        class="rating-icon" />
+      {{ round(movie.vote_average) }}
     </span>
     <tui-line-clamp
       class="text-sm"
       [content]="movie.title"
       [lineHeight]="20"
-      [linesLimit]="2"
-    />
-    <button tuiButton appearance="primary" size="s" (click)="rate($event, movie)">
+      [linesLimit]="2" />
+    <button
+      tuiButton
+      appearance="primary"
+      size="s"
+      (click)="rate($event, movie)">
       Rate
     </button>
-    <button tuiButton appearance="secondary" size="s" (click)="addToWishlist(movie)">
+    <button
+      tuiButton
+      appearance="secondary"
+      size="s"
+      (click)="addToWishlist(movie)">
       Add to wishlist
     </button>
   </div>
