Check authorization method

--- a/client/src/app/components/pages/signup-page/signup-page.component.html
+++ b/client/src/app/components/pages/signup-page/signup-page.component.html
@@ -7,15 +7,18 @@
       <text-input
         name="First Name"
         [control]="formControls.firstName"
-        class="w-full" />
+        class="w-full"
+      />
       <text-input
         name="Last Name"
         [control]="formControls.lastName"
-        class="w-full" />
+        class="w-full"
+      />
     </div>
     <text-input name="email" [control]="formControls.email" />
     <text-input name="username" [control]="formControls.username" />
     <password-input name="password" [control]="formControls.password" />
     <button tuiButton class="mt-4 w-full">Sign up</button>
+    <p>Already a user? <a tuiLink [routerLink]="['../login']">Log in</a></p>
   </tui-island>
 </div>
