--- a/client/src/app/components/layouts/base-layout/base-layout.component.scss
+++ b/client/src/app/components/layouts/base-layout/base-layout.component.scss
@@ -3,11 +3,7 @@
   height: 100vh;
   width: 100vw;
   background-color: var(--tui-base-01);
-}
-
-sidebar {
-  height: calc(100% - 60px);
-  width: 60px;
+  position: relative;
 }
 
 app-header {
