--- a/client/src/app/components/pages/movie-page/movie-page.component.html
+++ b/client/src/app/components/pages/movie-page/movie-page.component.html
@@ -1,9 +1,12 @@
+<app-header />
+
 <div
   class="w-full blur-2xl gap-6 absolute h-[500px] opacity-50 mt-8 ml-80"
   setBackgroundImage
   [imageUrl]="
     'https://image.tmdb.org/t/p/w600_and_h900_bestv2/' + movie.poster_path
-  "></div>
+  "
+></div>
 
 <div class="absolute flex m-10 gap-20 h-[500px]">
   <!--Movie Image-->
@@ -12,7 +15,8 @@
     [src]="
       'https://image.tmdb.org/t/p/w600_and_h900_bestv2/' + movie.backdrop_path
     "
-    alt="movie-poster-image" />
+    alt="movie-poster-image"
+  />
   <!--Movie Details-->
   <div class="flex flex-col h-[520px] justify-between">
     <div>
@@ -24,22 +28,26 @@
         <tui-tag
           class="mr-1.5 my-2"
           [value]="getGenreName(genreId)"
-          *ngIf="!!genreId" />
+          *ngIf="!!genreId"
+        />
       </ng-container>
 
       <div class="flex gap-2 mt-4">
         <tui-svg
           [src]="tuiIconBookmarkLarge"
           tuiHint="Add to wishlist"
-          tuiHintDirection="bottom-right" />
+          tuiHintDirection="bottom-right"
+        />
         <tui-svg
           [src]="tuiIconHeartLarge"
           tuiHint="Add to favorites"
-          tuiHintDirection="bottom-right" />
+          tuiHintDirection="bottom-right"
+        />
         <tui-svg
           [src]="tuiIconStarLarge"
           tuiHint="Rate"
-          tuiHintDirection="bottom-right" />
+          tuiHintDirection="bottom-right"
+        />
       </div>
     </div>
 
@@ -53,7 +61,8 @@
             [iconNormal]="tuiIconStar"
             [iconFilled]="tuiIconStarLarge"
             style="color: var(--tui-accent)"
-            class="rating-icon" />
+            class="rating-icon"
+          />
           <p class="text-lg">{{ round(movie.vote_average) }}</p>
         </div>
       </div>
