--- a/client/src/app/components/shared/header/header.component.scss
+++ b/client/src/app/components/shared/header/header.component.scss
@@ -2,6 +2,9 @@
   display: block;
   background-color: var(--tui-base-02);
   padding: 12px 40px;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
 .logo {
