--- a/client/src/app/components/shared/unauthorized-dialog/unauthorized-dialog.component.html
+++ b/client/src/app/components/shared/unauthorized-dialog/unauthorized-dialog.component.html
@@ -1,6 +1,8 @@
 <p>You should be logged in, to be able to rate a movie!</p>
 <div class="flex justify-end items-center gap-2 mt-4">
-  <button tuiButton appearance="secondary" size="s">Close</button>
+  <button tuiButton appearance="secondary" size="s" (click)="close()">
+    Close
+  </button>
   <button tuiButton appearance="primary" size="s" (click)="goToLogin()">
     Log In
   </button>
