--- a/client/src/app/components/shared/search/search.component.html
+++ b/client/src/app/components/shared/search/search.component.html
@@ -1,7 +1,8 @@
 <tui-input
   tuiTextfieldSize="s"
   [tuiTextfieldLabelOutside]="false"
-  [tuiTextfieldIconLeft]="tuiIconSearch">
+  [formControl]="searchValue"
+  [tuiTextfieldIconLeft]="tuiIconSearch"
+>
   Search...
-  <!--  <input tuiTextfield/>-->
 </tui-input>
