--- a/client/src/app/components/layouts/movie-layout/movie-layout.component.html
+++ b/client/src/app/components/layouts/movie-layout/movie-layout.component.html
@@ -1,10 +1,4 @@
 <app-header />
-<div
-  class="flex justify-center m-8 items-center flex-wrap gap-x-3 gap-y-5 movies"
->
-  <movie-card
-    *ngFor="let movie of json.results"
-    [movie]="movie"
-    (click)="goToMovieDetails(movie)"
-  />
+<div class="flex justify-center m-8 items-center flex-wrap gap-x-3 gap-y-5 movies">
+  <movie-card *ngFor="let movie of json.results" [movie]="movie" (click)="goToMovieDetails(movie)" />
 </div>
