--- a/client/src/app/components/shared/header/header.component.html
+++ b/client/src/app/components/shared/header/header.component.html
@@ -1,8 +1,5 @@
 <div class="flex justify-between items-center gap-60 h-[36px]">
-  <div
-    class="flex justify-between items-center h-full gap-1 logo cursor-pointer"
-    [routerLink]="'/'"
-  >
+  <div class="flex justify-between items-center h-full gap-1 logo cursor-pointer" [routerLink]="'/'">
     <tui-svg [src]="tuiIconFilm" />
     <p class="text-sm">Reel Review</p>
   </div>
@@ -12,38 +9,20 @@
   }
 
   <div class="flex justify-between items-center h-full gap-4">
-    <tui-svg
-      [src]="tuiIconFilter"
-      *ngIf="allowFiltering"
-      [tuiHint]="'Filter'"
-      (click)="openFilterDialog()"
-    />
+    <tui-svg [src]="tuiIconFilter" *ngIf="allowFiltering" [tuiHint]="'Filter'" (click)="openFilterDialog()" />
     @if (darkMode) {
-      <tui-svg
-        [src]="tuiIconSun"
-        (click)="toggleDarkMode()"
-        [tuiHint]="'Light Mode'"
-      />
+      <tui-svg [src]="tuiIconSun" (click)="toggleDarkMode()" [tuiHint]="'Light Mode'" />
     } @else {
-      <tui-svg
-        [src]="tuiIconMoon"
-        (click)="toggleDarkMode()"
-        [tuiHint]="'Dark Mode'"
-      />
+      <tui-svg [src]="tuiIconMoon" (click)="toggleDarkMode()" [tuiHint]="'Dark Mode'" />
     }
 
     <ng-container *ngIf="authService.loggedIn">
       <tui-svg [src]="tuiIconBookmark" />
-      <tui-svg [src]="tuiIconUser" (click)="authService.toggle()" />
+      <tui-svg [src]="tuiIconUser" />
     </ng-container>
 
     <ng-container *ngIf="!authService.loggedIn">
-      <tui-svg
-        (click)="authService.toggle()"
-        [routerLink]="'/login'"
-        [src]="tuiIconLogIn"
-        [tuiHint]="'Log In'"
-      />
+      <tui-svg [routerLink]="'/login'" [src]="tuiIconLogIn" [tuiHint]="'Log In'" />
     </ng-container>
   </div>
 </div>
