--- a/client/src/app/components/shared/filter-dialog/filter-dialog.component.html
+++ b/client/src/app/components/shared/filter-dialog/filter-dialog.component.html
@@ -29,7 +29,7 @@
         [formControl]="form.controls.language"
         [tuiTextfieldSize]="'m'"
         [tuiTextfieldLabelOutside]="true"
-        [stringify]="stringify"
+        [stringify]="languageStringify"
       >
         Select languages...
         <tui-data-list
