--- a/client/src/app/components/shared/movie-card/movie-card.component.html
+++ b/client/src/app/components/shared/movie-card/movie-card.component.html
@@ -1,6 +1,6 @@
 <tui-island class="w-56" [hoverable]="true">
   <img
-    class="w-full rounded-t-lg"
+    class="w-full rounded-t-lg movie-poster"
     [src]="
       'https://image.tmdb.org/t/p/w600_and_h900_bestv2/' + movie.backdrop_path
     "
