--- a/client/src/app/components/layouts/movie-layout/movie-layout.component.html
+++ b/client/src/app/components/layouts/movie-layout/movie-layout.component.html
@@ -1,4 +1,14 @@
-<app-header />
-<div class="flex justify-center m-8 items-center flex-wrap gap-x-3 gap-y-5 movies">
-  <movie-card *ngFor="let movie of json.results" [movie]="movie" (click)="goToMovieDetails(movie)" />
-</div>
+<app-header (filtered)="onFilter($event)"/>
+
+<tui-loader [showLoader]="showLoader()" [overlay]="true">
+  <div class="flex justify-center m-8 items-center flex-wrap gap-x-3 gap-y-5 movies">
+    <movie-card *ngFor="let movie of movies" [movie]="movie" (click)="goToMovieDetails(movie)" />
+  </div>
+  <div class="mb-4">
+    <tui-pagination
+      [index]="index"
+      [length]="50"
+      (indexChange)="goToPage($event)"
+    />
+  </div>
+</tui-loader>
