--- a/client/src/app/components/layouts/movie-layout/movie-layout.component.scss
+++ b/client/src/app/components/layouts/movie-layout/movie-layout.component.scss
@@ -3,6 +3,16 @@
 
   .movies {
     max-height: calc(100% - 62px);
+    min-height: calc(100vh - 170px);
     overflow: auto;
+  }
+
+  tui-loader {
+    max-height: 100vh;
+    padding-bottom: 100px;
+  }
+
+  tui-pagination {
+    margin-bottom: 12px;
   }
 }
