--- a/client/src/app/components/shared/header/header.component.html
+++ b/client/src/app/components/shared/header/header.component.html
@@ -5,7 +5,7 @@
   </div>
 
   @if (allowSearch) {
-    <app-search class="grow w-40" />
+    <app-search class="grow w-40" (searched)="searched.next($event)"/>
   }
 
   <div class="flex justify-between items-center h-full gap-4">
