--- a/client/src/app/components/pages/movie-page/movie-page.component.html
+++ b/client/src/app/components/pages/movie-page/movie-page.component.html
@@ -36,22 +36,21 @@
         }
       </div>
 
-      <div class="flex gap-2 mt-4">
+      <div class="flex gap-2 mt-4 items-center">
         <tui-svg
+          class="watchlist-icon"
           [src]="tuiIconBookmarkLarge"
-          tuiHint="Add to wishlist"
+          [tuiHint]="movie?.isInWishlist ? 'Remove from watchlist' : 'Add to watchlist'"
           tuiHintDirection="bottom-right"
-          [class.fill-icon]="movie?.isInWishlist"
+          [class.fill-watchlist-icon]="movie?.isInWishlist"
           (click)="movie.isInWishlist ? removeFromWishlist(): addToWishlist()"
         />
         <tui-svg
-          [src]="tuiIconHeartLarge"
-          tuiHint="Add to favorites"
-          tuiHintDirection="bottom-right"
-        />
-        <tui-svg
+          class="rating-icon"
           [src]="tuiIconStarLarge"
-          tuiHint="Rate"
+          [tuiHint]="movie?.review ? 'Edit rating' : 'Rate'"
+          (click)="openRatingDialog()"
+          [class.fill-rating-icon]="movie?.review"
           tuiHintDirection="bottom-right"
         />
       </div>
@@ -100,7 +99,24 @@
   <div class="w-[300px]">
     <tui-scrollbar>
       <span class="text-sm">Reviews</span>
-      <p class="text-lg">No reviews yet!</p>
+      @if (!reviews?.length) {
+        <p class="text-lg">No reviews yet!</p>
+      } @else {
+        <tui-scrollbar class="scrollbar">
+          <div class="flex flex-col gap-4 pt-3 mr-3 reviews">
+            @for (review of reviews; track review._id) {
+                <div>
+                  <div class="flex gap-2">
+                    <tui-avatar [text]="review.user?.firstName" size="xs" [style.background]="review?.user | avatarColor"/>
+                    <p>{{review.user?.firstName}} {{review.user?.lastName}}</p>
+                  </div>
+                </div>
+                <tui-rating [ngModel]="review.rating" [readOnly]="true" [max]="10" class="rating" />
+                <p>{{review.comment}}</p>
+            }
+          </div>
+        </tui-scrollbar>
+      }
     </tui-scrollbar>
   </div>
 </div>
