--- a/client/src/app/components/pages/user-page/user-page.component.scss
+++ b/client/src/app/components/pages/user-page/user-page.component.scss
@@ -2,8 +2,24 @@
   display: block;
   height: 100%;
 
-  tui-island {
-    height: 100%;
-    width: 350px;
+  .empty-state {
+    display: flex;
   }
+
+  .rating {
+    margin: -20px -40px;
+    color: var(--tui-warning-fill);
+    font-size: 0.25rem;
+    width: 10rem;
+    scale: 50%
+  }
+
+  .review-card {
+    border: 1px solid var(--tui-base-02);
+  }
+
+  .rating-icon {
+    color: var(--tui-accent);
+  }
+
 }
