--- a/client/src/app/components/shared/unauthorized-dialog/unauthorized-dialog.component.html
+++ b/client/src/app/components/shared/unauthorized-dialog/unauthorized-dialog.component.html
@@ -1,4 +1,4 @@
-<p>You should be logged in, to be able to rate a movie!</p>
+<p>You need to be logged in to complete this action. Please sign in or create an account.</p>
 <div class="flex justify-end items-center gap-2 mt-4">
   <button tuiButton appearance="secondary" size="s" (click)="close()">
     Close
