--- a/client/src/app/components/layouts/movie-layout/movie-layout.component.html
+++ b/client/src/app/components/layouts/movie-layout/movie-layout.component.html
@@ -6,7 +6,9 @@
       <p>No movies found.</p>
     } @else {
       <div class="grid grid-cols-5 gap-4 m-4">
-        <movie-card *ngFor="let movie of movies()" [movie]="movie" (click)="goToMovieDetails(movie)" />
+        @for (movie of movies(); track movie.id) {
+          <movie-card [movie]="movie" (click)="goToMovieDetails(movie)" />
+        }
       </div>
     }
   </div>
